Fix more encoding issues.

--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ca.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ca.properties
@@ -1632,7 +1632,7 @@ documentMoved=Mogut
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=cicle de vida del document no t\u00e9 &quot;eliminat&quot; de l'Estat. L'operaci\u00f3 no \u00e9s possible la de:
+document_no_deleted_state=cicle de vida del document no t\u00e9 'eliminat' de l'Estat. L'operaci\u00f3 no \u00e9s possible la de:
 
 # google translation: please check
 #en: Publication approved
@@ -5617,7 +5617,7 @@ label.local.configuration.contentView=Documents de la configuraci\u00f3 de conti
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=Per canviar un o m\u00e9s llista el contingut del document, feu clic al bot\u00f3 &quot;Habilitar&quot; i seleccioneu el contentView que voleu utilitzar.
+label.local.configuration.contentView.info=Per canviar un o m\u00e9s llista el contingut del document, feu clic al bot\u00f3 'Habilitar' i seleccioneu el contentView que voleu utilitzar.
 
 # google translation: please check
 #en: Disable
@@ -5633,7 +5633,7 @@ label.local.configuration.modified=Configuraci\u00f3 local modificats
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Per establir una forma diferent per a la cerca avan\u00e7ada en el seu espai, feu clic al bot\u00f3 &quot;Habilitar&quot; i seleccioneu la forma que voleu utilitzar.
+label.local.configuration.search.info=Per establir una forma diferent per a la cerca avan\u00e7ada en el seu espai, feu clic al bot\u00f3 'Habilitar' i seleccioneu la forma que voleu utilitzar.
 
 # google translation: please check
 #en: Search Configuration
@@ -5649,7 +5649,7 @@ label.local.configuration.selection.selectedUITypes=tipus Activat
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Per establir un tema diferent en el teu espai, fes clic al bot\u00f3 &quot;Habilitar&quot; i seleccioneu el tema que vulgueu utilitzar.
+label.local.configuration.theme.info=Per establir un tema diferent en el teu espai, fes clic al bot\u00f3 'Habilitar' i seleccioneu el tema que vulgueu utilitzar.
 
 # google translation: please check
 #en: Theme configuration
@@ -5673,7 +5673,7 @@ label.local.configuration.uiTypes=Document tipus de configuraci\u00f3
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Per establir quins tipus de documents es poden crear en el teu espai, fes clic al bot\u00f3 &quot;Habilitar&quot; i seleccioneu els tipus de documents que es poden crear. Tingueu en compte que per defecte, tots els tipus se'ls permet, moveu el que voleu filtrar a la columna de l'esquerra
+label.local.configuration.uiTypes.info=Per establir quins tipus de documents es poden crear en el teu espai, fes clic al bot\u00f3 'Habilitar' i seleccioneu els tipus de documents que es poden crear. Tingueu en compte que per defecte, tots els tipus se'ls permet, moveu el que voleu filtrar a la columna de l'esquerra
 
 # Human translation
 #en: Location
@@ -7808,7 +7808,7 @@ label.step.operationIds=Operaci\u00f3 Ids
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=Utilitzeu el bot\u00f3 &quot;Update&quot; quan es vol actualitzar l'Estudi plugin amb el que est\u00e0 configurant actualment en l'estudi.
+label.studio.devmod.desc1=Utilitzeu el bot\u00f3 'Update' quan es vol actualitzar l'Estudi plugin amb el que est\u00e0 configurant actualment en l'estudi.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
