--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
@@ -1144,7 +1144,7 @@ command.logout=Abmelden
 # Human translation
 #en: Users & groups
 command.manageMembers=Benutzer & Gruppen
-#google: Users &amp; Groups
+#google: Users & Groups
 
 # Human translation
 #en: Themes
@@ -5915,7 +5915,7 @@ label.local.configuration.contentView=Dokumente Inhalt Konfiguration
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=So \u00e4ndern Sie eine oder mehrere Dokumentinhalt Inserat, klicken Sie auf die Schaltfl\u00e4che &quot;Aktivieren&quot; und w\u00e4hlen Sie die InhaltAlle die Sie verwenden m\u00f6chten.
+label.local.configuration.contentView.info=So \u00e4ndern Sie eine oder mehrere Dokumentinhalt Inserat, klicken Sie auf die Schaltfl\u00e4che 'Aktivieren' und w\u00e4hlen Sie die InhaltAlle die Sie verwenden m\u00f6chten.
 
 # google translation: please check
 #en: Disable
@@ -5931,7 +5931,7 @@ label.local.configuration.modified=Lokale Konfiguration ge\u00e4ndert
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Um eine andere Form f\u00fcr die erweiterte Suche in Ihren Raum, klicken Sie auf die Schaltfl\u00e4che &quot;Aktivieren&quot; und w\u00e4hlen Sie die gew\u00fcnschte Form zu verwenden.
+label.local.configuration.search.info=Um eine andere Form f\u00fcr die erweiterte Suche in Ihren Raum, klicken Sie auf die Schaltfl\u00e4che 'Aktivieren' und w\u00e4hlen Sie die gew\u00fcnschte Form zu verwenden.
 
 # google translation: please check
 #en: Search Configuration
@@ -5947,7 +5947,7 @@ label.local.configuration.selection.selectedUITypes=Aktiviert Arten
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Um ein anderes Thema f\u00fcr Ihr Platz, klicken Sie auf die Schaltfl\u00e4che &quot;Aktivieren&quot; und w\u00e4hlen Sie das Thema, das Sie verwenden m\u00f6chten.
+label.local.configuration.theme.info=Um ein anderes Thema f\u00fcr Ihr Platz, klicken Sie auf die Schaltfl\u00e4che 'Aktivieren' und w\u00e4hlen Sie das Thema, das Sie verwenden m\u00f6chten.
 
 # google translation: please check
 #en: Theme configuration
@@ -5971,7 +5971,7 @@ label.local.configuration.uiTypes=Dokumenttypen Konfiguration
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Um festzulegen, welche Arten von Dokumenten k\u00f6nnen in Ihrem Raum geschaffen werden, klicken Sie auf die Schaltfl\u00e4che &quot;Aktivieren&quot; und w\u00e4hlen Sie die Dokumenttypen, die erstellt werden k\u00f6nnen. Beachten Sie, dass standardm\u00e4\u00dfig alle Arten zul\u00e4ssig sind, bewegen Sie das gew\u00fcnschte herauszufiltern in der linken Spalte
+label.local.configuration.uiTypes.info=Um festzulegen, welche Arten von Dokumenten k\u00f6nnen in Ihrem Raum geschaffen werden, klicken Sie auf die Schaltfl\u00e4che 'Aktivieren' und w\u00e4hlen Sie die Dokumenttypen, die erstellt werden k\u00f6nnen. Beachten Sie, dass standardm\u00e4\u00dfig alle Arten zul\u00e4ssig sind, bewegen Sie das gew\u00fcnschte herauszufiltern in der linken Spalte
 
 # Human translation
 #en: Location
@@ -5995,7 +5995,7 @@ label.log.comment.assignedToUser=zugewiesen an
 
 # Human translation
 #en: Copyright \u00A9 2001-2011 Nuxeo and respective authors.
-label.login.copyright=Copyright &copy; 2001-2011 Nuxeo and respective authors.
+label.login.copyright=Copyright 2001-2011 Nuxeo and respective authors.
 #google: Copyright \u00a9 2001-2010 Nuxeo und den jeweiligen Autoren.
 
 # Human translation
@@ -8304,7 +8304,7 @@ label.step.operationIds=Operation Ids
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=Verwenden Sie die Schaltfl\u00e4che &quot;Aktualisieren&quot;, wenn Sie die Aktualisierung der Studio-Plugin mit, was Sie gerade im Studio konfigurieren m\u00f6chten.
+label.studio.devmod.desc1=Verwenden Sie die Schaltfl\u00e4che 'Aktualisieren', wenn Sie die Aktualisierung der Studio-Plugin mit, was Sie gerade im Studio konfigurieren m\u00f6chten.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
