--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
@@ -1693,7 +1693,7 @@ documentMoved=Movido
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=ciclo de vida del documento no tiene &quot;eliminado&quot; del Estado. La operaci\u00f3n no es posible la de:
+document_no_deleted_state=ciclo de vida del documento no tiene 'eliminado' del Estado. La operaci\u00f3n no es posible la de:
 
 # Human translation
 #en: Publication approved
@@ -5805,7 +5805,7 @@ label.local.configuration.contentView=Documentos de la configuraci\u00f3n de con
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=Para cambiar uno o m\u00e1s lista el contenido del documento, haga clic en el bot\u00f3n &quot;Habilitar&quot; y seleccione el contentView que desea utilizar.
+label.local.configuration.contentView.info=Para cambiar uno o m\u00e1s lista el contenido del documento, haga clic en el bot\u00f3n 'Habilitar' y seleccione el contentView que desea utilizar.
 
 # google translation: please check
 #en: Disable
@@ -5821,7 +5821,7 @@ label.local.configuration.modified=Configuraci\u00f3n local modificados
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Para establecer una forma diferente para la b\u00fasqueda avanzada en su espacio, haga clic en el bot\u00f3n &quot;Habilitar&quot; y seleccione la forma que desea utilizar.
+label.local.configuration.search.info=Para establecer una forma diferente para la b\u00fasqueda avanzada en su espacio, haga clic en el bot\u00f3n 'Habilitar' y seleccione la forma que desea utilizar.
 
 # google translation: please check
 #en: Search Configuration
@@ -5837,7 +5837,7 @@ label.local.configuration.selection.selectedUITypes=tipos Activado
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Para establecer un tema diferente en tu espacio, haz clic en el bot\u00f3n &quot;Habilitar&quot; y seleccione el tema que desee utilizar.
+label.local.configuration.theme.info=Para establecer un tema diferente en tu espacio, haz clic en el bot\u00f3n 'Habilitar' y seleccione el tema que desee utilizar.
 
 # google translation: please check
 #en: Theme configuration
@@ -5861,7 +5861,7 @@ label.local.configuration.uiTypes=Documento tipos de configuraci\u00f3n
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Para establecer qu\u00e9 tipos de documentos se pueden crear en tu espacio, haz clic en el bot\u00f3n &quot;Habilitar&quot; y seleccione los tipos de documentos que se pueden crear. Tenga en cuenta que por defecto, todos los tipos se les permite, mueva el que desea filtrar en la columna de la izquierda
+label.local.configuration.uiTypes.info=Para establecer qu\u00e9 tipos de documentos se pueden crear en tu espacio, haz clic en el bot\u00f3n 'Habilitar' y seleccione los tipos de documentos que se pueden crear. Tenga en cuenta que por defecto, todos los tipos se les permite, mueva el que desea filtrar en la columna de la izquierda
 
 # Human translation
 #en: Location
@@ -8127,7 +8127,7 @@ label.step.operationIds=Operaci\u00f3n Ids
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=Utilice el bot\u00f3n &quot;Update&quot; cuando se quiere actualizar el Estudio plugin con lo que est\u00e1 configurando actualmente en el estudio.
+label.studio.devmod.desc1=Utilice el bot\u00f3n 'Update' cuando se quiere actualizar el Estudio plugin con lo que est\u00e1 configurando actualmente en el estudio.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
