--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_gl.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_gl.properties
@@ -1652,7 +1652,7 @@ documentMoved=Movido
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=ciclo de vida do documento non ten &quot;exclu\u00eddo&quot; do Estado. A operaci\u00f3n non \u00e9 posible a:
+document_no_deleted_state=ciclo de vida do documento non ten 'exclu\u00eddo' do Estado. A operaci\u00f3n non \u00e9 posible a:
 
 # google translation: please check
 #en: Publication approved
@@ -5673,7 +5673,7 @@ label.local.configuration.contentView=Documentos de configuraci\u00f3n de contid
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=Para cambiar unha ou m\u00e1is lista o contido do documento, faga clic no bot\u00f3n &quot;Activar&quot; e selecciona a contentView quere usar.
+label.local.configuration.contentView.info=Para cambiar unha ou m\u00e1is lista o contido do documento, faga clic no bot\u00f3n 'Activar' e selecciona a contentView quere usar.
 
 # google translation: please check
 #en: Disable
@@ -5689,7 +5689,7 @@ label.local.configuration.modified=Configuraci\u00f3n local modificado
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Para definir unha forma diferente para a busca avanzada no seu espazo, prema no bot\u00f3n &quot;Activar&quot; e selecciona o xeito que quere usar.
+label.local.configuration.search.info=Para definir unha forma diferente para a busca avanzada no seu espazo, prema no bot\u00f3n 'Activar' e selecciona o xeito que quere usar.
 
 # google translation: please check
 #en: Search Configuration
@@ -5705,7 +5705,7 @@ label.local.configuration.selection.selectedUITypes=tipos Habilitado
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Para definir un tema diferente no seu espazo, prema no bot\u00f3n &quot;Activar&quot; e selecciona o tema que desexa usar.
+label.local.configuration.theme.info=Para definir un tema diferente no seu espazo, prema no bot\u00f3n 'Activar' e selecciona o tema que desexa usar.
 
 # google translation: please check
 #en: Theme configuration
@@ -5729,7 +5729,7 @@ label.local.configuration.uiTypes=Documento tipo de configuraci\u00f3n
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Para definir tipos de documentos poden ser creados no seu espazo, prema no bot\u00f3n &quot;Activar&quot; e selecciona os tipos de documentos que se poden crear. Te\u00f1a en conta que por defecto, todo tipo se permiten, mover o que quere filtrar na columna da esquerda
+label.local.configuration.uiTypes.info=Para definir tipos de documentos poden ser creados no seu espazo, prema no bot\u00f3n 'Activar' e selecciona os tipos de documentos que se poden crear. Te\u00f1a en conta que por defecto, todo tipo se permiten, mover o que quere filtrar na columna da esquerda
 
 # Human translation
 #en: Location
@@ -7921,7 +7921,7 @@ label.step.operationIds=Operaci\u00f3n IDs
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=Use o bot\u00f3n &quot;Update&quot; cando quere actualizar o plugin Studio co que est\u00e1 configurando no Studio.
+label.studio.devmod.desc1=Use o bot\u00f3n 'Update' cando quere actualizar o plugin Studio co que est\u00e1 configurando no Studio.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
