--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_it.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_it.properties
@@ -5928,7 +5928,7 @@ label.local.configuration.contentView=Documenti contenuto di configurazione
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=Per modificare uno o pi\u00f9 annunci contenuto del documento, cliccare sul pulsante &quot;Attiva&quot; e selezionare il contentView che si desidera utilizzare.
+label.local.configuration.contentView.info=Per modificare uno o pi\u00f9 annunci contenuto del documento, cliccare sul pulsante 'Attiva' e selezionare il contentView che si desidera utilizzare.
 
 # google translation: please check
 #en: Disable
@@ -5944,7 +5944,7 @@ label.local.configuration.modified=Configurazione locale modificato
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Per impostare una forma diversa per la ricerca avanzata nel tuo spazio, clicca sul pulsante &quot;Attiva&quot; e selezionare il modulo che si desidera utilizzare.
+label.local.configuration.search.info=Per impostare una forma diversa per la ricerca avanzata nel tuo spazio, clicca sul pulsante 'Attiva' e selezionare il modulo che si desidera utilizzare.
 
 # google translation: please check
 #en: Search Configuration
@@ -5960,7 +5960,7 @@ label.local.configuration.selection.selectedUITypes=tipi Attivato
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Per impostare un tema diverso nel vostro spazio, fare clic sul pulsante &quot;Attiva&quot; e selezionare il tema che si desidera utilizzare.
+label.local.configuration.theme.info=Per impostare un tema diverso nel vostro spazio, fare clic sul pulsante 'Attiva' e selezionare il tema che si desidera utilizzare.
 
 # google translation: please check
 #en: Theme configuration
@@ -5984,7 +5984,7 @@ label.local.configuration.uiTypes=Documento tipi di configurazione
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Per impostare i tipi di documenti possono essere creati nel tuo spazio, clicca sul pulsante &quot;Attiva&quot; e selezionare i tipi di documento che pu\u00f2 essere creato. Si noti che per impostazione predefinita, sono consentiti tutti i tipi, spostare quello che si desidera filtrare sulla colonna di sinistra
+label.local.configuration.uiTypes.info=Per impostare i tipi di documenti possono essere creati nel tuo spazio, clicca sul pulsante 'Attiva' e selezionare i tipi di documento che pu\u00f2 essere creato. Si noti che per impostazione predefinita, sono consentiti tutti i tipi, spostare quello che si desidera filtrare sulla colonna di sinistra
 
 # Human translation
 #en: Location
@@ -6008,7 +6008,7 @@ label.log.comment.assignedToUser=Assegnato a
 
 # Human translation
 #en: Copyright \u00A9 2001-2011 Nuxeo and respective authors.
-label.login.copyright=Copyright &copy; 2001-2011 Nuxeo e/o i rispettivi autori.
+label.login.copyright=Copyright 2001-2011 Nuxeo e/o i rispettivi autori.
 #google: Copyright \ u00A9 2001-2011 Nuxeo e rispettivi autori.
 
 # Human translation
@@ -8330,7 +8330,7 @@ label.step.operationIds=Operazione Ids
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=Utilizzare il tasto &quot;Aggiorna&quot; quando si vuole aggiornare il plugin Studio con quello che si sta configurando in Studio.
+label.studio.devmod.desc1=Utilizzare il tasto 'Aggiorna' quando si vuole aggiornare il plugin Studio con quello che si sta configurando in Studio.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
