--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
@@ -5915,7 +5915,7 @@ label.local.configuration.contentView=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=&quot;\u6709\u52b9\u306b\u3059\u308b&quot;\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u30011\u3064\u307e\u305f\u306f\u8907\u6570\u306e\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u30b3\u30f3\u30c6\u30f3\u30c4\u306e\u30ea\u30b9\u30c8\u3092\u5909\u66f4\u3057\u3001\u9078\u629e\u306econtentView\u3092\u3059\u308b\u306b\u306f\u3001\u4f7f\u7528\u3059\u308b\u3088\u3046\u306b\u3057\u307e\u3059\u3002
+label.local.configuration.contentView.info='\u6709\u52b9\u306b\u3059\u308b'\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u30011\u3064\u307e\u305f\u306f\u8907\u6570\u306e\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u30b3\u30f3\u30c6\u30f3\u30c4\u306e\u30ea\u30b9\u30c8\u3092\u5909\u66f4\u3057\u3001\u9078\u629e\u306econtentView\u3092\u3059\u308b\u306b\u306f\u3001\u4f7f\u7528\u3059\u308b\u3088\u3046\u306b\u3057\u307e\u3059\u3002
 
 # google translation: please check
 #en: Disable
@@ -5931,7 +5931,7 @@ label.local.configuration.modified=\u5909\u66f4\u3055\u308c\u305f\u30ed\u30fc\u3
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=&quot;\u6709\u52b9\u306b\u3059\u308b&quot;\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u3042\u306a\u305f\u306e\u30b9\u30da\u30fc\u30b9\u306e\u9ad8\u5ea6\u306a\u691c\u7d22\u5225\u306e\u30d5\u30a9\u30fc\u30e0\u3092\u8a2d\u5b9a\u3057\u3001\u4f7f\u7528\u3059\u308b\u30d5\u30a9\u30fc\u30e0\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+label.local.configuration.search.info='\u6709\u52b9\u306b\u3059\u308b'\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u3042\u306a\u305f\u306e\u30b9\u30da\u30fc\u30b9\u306e\u9ad8\u5ea6\u306a\u691c\u7d22\u5225\u306e\u30d5\u30a9\u30fc\u30e0\u3092\u8a2d\u5b9a\u3057\u3001\u4f7f\u7528\u3059\u308b\u30d5\u30a9\u30fc\u30e0\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 # google translation: please check
 #en: Search Configuration
@@ -5947,7 +5947,7 @@ label.local.configuration.selection.selectedUITypes=\u6709\u52b9\u306a\u30bf\u30
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=&quot;\u6709\u52b9\u306b\u3059\u308b&quot;\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3001\u7a7a\u9593\u5185\u306e\u7570\u306a\u308b\u30c6\u30fc\u30de\u3092\u8a2d\u5b9a\u3057\u3001\u4f7f\u7528\u3059\u308b\u30c6\u30fc\u30de\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+label.local.configuration.theme.info='\u6709\u52b9\u306b\u3059\u308b'\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3001\u7a7a\u9593\u5185\u306e\u7570\u306a\u308b\u30c6\u30fc\u30de\u3092\u8a2d\u5b9a\u3057\u3001\u4f7f\u7528\u3059\u308b\u30c6\u30fc\u30de\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 # google translation: please check
 #en: Theme configuration
@@ -5971,7 +5971,7 @@ label.local.configuration.uiTypes=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u30bf\u30
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=&quot;\u6709\u52b9\u306b\u3059\u308b&quot;\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u7a2e\u985e\u306f\u3001\u3042\u306a\u305f\u306e\u30b9\u30da\u30fc\u30b9\u5185\u306b\u4f5c\u6210\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u304c\u8a2d\u5b9a\u3057\u3066\u3001\u4f5c\u6210\u3067\u304d\u308b\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u7a2e\u985e\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u30c7\u30d5\u30a9\u30eb\u30c8\u3067\u306f\u3001\u3059\u3079\u3066\u306e\u30bf\u30a4\u30d7\u304c\u8a31\u53ef\u3055\u308c\u3066\u3044\u308b\u3053\u3068\u306b\u6ce8\u610f\u3057\u3066\u304f\u3060\u3055\u3044\u3042\u306a\u305f\u306f\u3001\u5de6\u5074\u306e\u5217\u306e\u30d5\u30a3\u30eb\u30bf\u3067\u9664\u5916\u3057\u305f\u3044\u3082\u306e\u3092\u79fb\u52d5\u3059\u308b
+label.local.configuration.uiTypes.info='\u6709\u52b9\u306b\u3059\u308b'\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u7a2e\u985e\u306f\u3001\u3042\u306a\u305f\u306e\u30b9\u30da\u30fc\u30b9\u5185\u306b\u4f5c\u6210\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u304c\u8a2d\u5b9a\u3057\u3066\u3001\u4f5c\u6210\u3067\u304d\u308b\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u7a2e\u985e\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u30c7\u30d5\u30a9\u30eb\u30c8\u3067\u306f\u3001\u3059\u3079\u3066\u306e\u30bf\u30a4\u30d7\u304c\u8a31\u53ef\u3055\u308c\u3066\u3044\u308b\u3053\u3068\u306b\u6ce8\u610f\u3057\u3066\u304f\u3060\u3055\u3044\u3042\u306a\u305f\u306f\u3001\u5de6\u5074\u306e\u5217\u306e\u30d5\u30a3\u30eb\u30bf\u3067\u9664\u5916\u3057\u305f\u3044\u3082\u306e\u3092\u79fb\u52d5\u3059\u308b
 
 # Human translation
 #en: Location
@@ -5995,7 +5995,7 @@ label.log.comment.assignedToUser=\u5272\u308a\u5f53\u3066\u5148\uff1a
 
 # Human translation
 #en: Copyright \u00A9 2001-2011 Nuxeo and respective authors.
-label.login.copyright=Copyright &copy; 2001-2010 Nuxeo and respective authors.
+label.login.copyright=Copyright 2001-2011 Nuxeo and respective authors.
 #google: \u8457\u4f5c\u6a29\u00a9 2001-2010 Nuxeo\u3068\u305d\u308c\u305e\u308c\u306e\u4f5c\u8005\u3002
 
 # Human translation
@@ -8304,7 +8304,7 @@ label.step.operationIds=\u64cd\u4f5cID\u8ffd\u52a0
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=\u3042\u306a\u305f\u306fStudio\u306b\u306f\u3001\u73fe\u5728\u3001Studio\u3067\u69cb\u6210\u3057\u3066\u3044\u308b\u3082\u306e\u3068\u30d7\u30e9\u30b0\u30a4\u30f3\u3092\u66f4\u65b0\u3057\u305f\u3044\u5834\u5408\u3001&quot;\u66f4\u65b0&quot;\u30dc\u30bf\u30f3\u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+label.studio.devmod.desc1=\u3042\u306a\u305f\u306fStudio\u306b\u306f\u3001\u73fe\u5728\u3001Studio\u3067\u69cb\u6210\u3057\u3066\u3044\u308b\u3082\u306e\u3068\u30d7\u30e9\u30b0\u30a4\u30f3\u3092\u66f4\u65b0\u3057\u305f\u3044\u5834\u5408\u3001'\u66f4\u65b0'\u30dc\u30bf\u30f3\u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
