--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
@@ -1743,7 +1743,7 @@ documentMoved=Ruch
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=cyklu \u017cycia dokumentu nie ma &quot;usuni\u0119te&quot; pa\u0144stwa. Operacja nie jest posible dla:
+document_no_deleted_state=cyklu \u017cycia dokumentu nie ma 'usuni\u0119te' pa\u0144stwa. Operacja nie jest posible dla:
 
 # Human translation
 #en: Publication approved
@@ -5915,7 +5915,7 @@ label.local.configuration.contentView=konfiguracj\u0119 tre\u015bci dokument\u00
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=Aby zmieni\u0107 jeden lub wi\u0119cej tre\u015bci aukcji dokument, kliknij na &quot;W\u0142\u0105cz&quot; i wybierz contentView chcesz u\u017cy\u0107.
+label.local.configuration.contentView.info=Aby zmieni\u0107 jeden lub wi\u0119cej tre\u015bci aukcji dokument, kliknij na 'W\u0142\u0105cz' i wybierz contentView chcesz u\u017cy\u0107.
 
 # google translation: please check
 #en: Disable
@@ -5931,7 +5931,7 @@ label.local.configuration.modified=Lokalne zmodyfikowanej konfiguracji
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Aby ustawi\u0107 inny formularz wyszukiwania zaawansowanego w przestrzeni, kliknij na &quot;W\u0142\u0105cz&quot; i wybierz formularz, kt\u00f3ry chcesz u\u017cy\u0107.
+label.local.configuration.search.info=Aby ustawi\u0107 inny formularz wyszukiwania zaawansowanego w przestrzeni, kliknij na 'W\u0142\u0105cz' i wybierz formularz, kt\u00f3ry chcesz u\u017cy\u0107.
 
 # google translation: please check
 #en: Search Configuration
@@ -5947,7 +5947,7 @@ label.local.configuration.selection.selectedUITypes=W\u0142\u0105czone typy
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Aby ustawi\u0107 inny motyw w przestrzeni, kliknij na &quot;W\u0142\u0105cz&quot; i wybierz temat, kt\u00f3rego chcesz u\u017cy\u0107.
+label.local.configuration.theme.info=Aby ustawi\u0107 inny motyw w przestrzeni, kliknij na 'W\u0142\u0105cz' i wybierz temat, kt\u00f3rego chcesz u\u017cy\u0107.
 
 # google translation: please check
 #en: Theme configuration
@@ -5971,7 +5971,7 @@ label.local.configuration.uiTypes=Dokument rodzaje konfiguracji
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Aby ustawi\u0107 typy dokument\u00f3w mog\u0105 by\u0107 tworzone w przestrzeni, kliknij na &quot;W\u0142\u0105cz&quot; i wybierz typ dokumentu, kt\u00f3ry mo\u017ce zosta\u0107 utworzony. Zauwa\u017c, \u017ce domy\u015blnie, wszystkie typy s\u0105 dozwolone, przenie\u015b\u0107, kt\u00f3ry chcesz filtrowa\u0107 w lewej kolumnie
+label.local.configuration.uiTypes.info=Aby ustawi\u0107 typy dokument\u00f3w mog\u0105 by\u0107 tworzone w przestrzeni, kliknij na 'W\u0142\u0105cz' i wybierz typ dokumentu, kt\u00f3ry mo\u017ce zosta\u0107 utworzony. Zauwa\u017c, \u017ce domy\u015blnie, wszystkie typy s\u0105 dozwolone, przenie\u015b\u0107, kt\u00f3ry chcesz filtrowa\u0107 w lewej kolumnie
 
 # Human translation
 #en: Location
@@ -5995,7 +5995,7 @@ label.log.comment.assignedToUser=Przypisane do
 
 # Human translation
 #en: Copyright \u00A9 2001-2011 Nuxeo and respective authors.
-label.login.copyright=Copyright &copy; 2001-2011 Nuxeo and respective authors.
+label.login.copyright=Copyright 2001-2011 Nuxeo and respective authors.
 #google: Copyright \u00a9 2001-2010 Nuxeo i autor\u00f3w.
 
 # Human translation
@@ -8304,7 +8304,7 @@ label.step.operationIds=Praca Identyfikatory
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=U\u017cyj przycisk &quot;Aktualizuj&quot;, gdy chcesz zaktualizowa\u0107 Studio plugin z tego, co obecnie konfiguracji w Studio.
+label.studio.devmod.desc1=U\u017cyj przycisk 'Aktualizuj', gdy chcesz zaktualizowa\u0107 Studio plugin z tego, co obecnie konfiguracji w Studio.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
