--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
@@ -1743,7 +1743,7 @@ documentMoved=Movido
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=ciclo de vida do documento n\u00e3o tem &quot;exclu\u00eddo&quot; do Estado. A opera\u00e7\u00e3o n\u00e3o \u00e9 posible para:
+document_no_deleted_state=ciclo de vida do documento n\u00e3o tem 'exclu\u00eddo' do Estado. A opera\u00e7\u00e3o n\u00e3o \u00e9 posible para:
 
 # Human translation
 #en: Publication approved
@@ -5915,7 +5915,7 @@ label.local.configuration.contentView=Documentos de configura\u00e7\u00e3o de co
 
 # google translation: please check
 #en: To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
-label.local.configuration.contentView.info=Para alterar uma ou mais lista o conte\u00fado do documento, clique no bot\u00e3o &quot;Ativar&quot; e selecione a contentView voc\u00ea deseja usar.
+label.local.configuration.contentView.info=Para alterar uma ou mais lista o conte\u00fado do documento, clique no bot\u00e3o 'Ativar' e selecione a contentView voc\u00ea deseja usar.
 
 # google translation: please check
 #en: Disable
@@ -5931,7 +5931,7 @@ label.local.configuration.modified=Configura\u00e7\u00e3o local modificado
 
 # google translation: please check
 #en: To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
-label.local.configuration.search.info=Para definir uma forma diferente para a pesquisa avan\u00e7ada em seu espa\u00e7o, clique no bot\u00e3o &quot;Ativar&quot; e selecione a forma que deseja usar.
+label.local.configuration.search.info=Para definir uma forma diferente para a pesquisa avan\u00e7ada em seu espa\u00e7o, clique no bot\u00e3o 'Ativar' e selecione a forma que deseja usar.
 
 # google translation: please check
 #en: Search Configuration
@@ -5947,7 +5947,7 @@ label.local.configuration.selection.selectedUITypes=tipos Habilitado
 
 # google translation: please check
 #en: To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
-label.local.configuration.theme.info=Para definir um tema diferente em seu espa\u00e7o, clique no bot\u00e3o &quot;Ativar&quot; e selecione o tema que pretende utilizar.
+label.local.configuration.theme.info=Para definir um tema diferente em seu espa\u00e7o, clique no bot\u00e3o 'Ativar' e selecione o tema que pretende utilizar.
 
 # google translation: please check
 #en: Theme configuration
@@ -5971,7 +5971,7 @@ label.local.configuration.uiTypes=Documento tipos de configura\u00e7\u00e3o
 
 # google translation: please check
 #en: To set which document types can be created in your space, click on the "Enable" button and select the document types that can be created. Note that by default, all types are allowed, move the one you want to filter out on the left column
-label.local.configuration.uiTypes.info=Para definir quais tipos de documentos podem ser criados no seu espa\u00e7o, clique no bot\u00e3o &quot;Ativar&quot; e selecione os tipos de documentos que podem ser criados. Note que por padr\u00e3o, todos os tipos s\u00e3o permitidos, mover o que voc\u00ea quer filtrar na coluna da esquerda
+label.local.configuration.uiTypes.info=Para definir quais tipos de documentos podem ser criados no seu espa\u00e7o, clique no bot\u00e3o 'Ativar' e selecione os tipos de documentos que podem ser criados. Note que por padr\u00e3o, todos os tipos s\u00e3o permitidos, mover o que voc\u00ea quer filtrar na coluna da esquerda
 
 # Human translation
 #en: Location
@@ -8304,7 +8304,7 @@ label.step.operationIds=Opera\u00e7\u00e3o Ids
 
 # google translation: please check
 #en: Use the "Update" button when you want to update the Studio plugin with what you are currently configuring in Studio.
-label.studio.devmod.desc1=Use o bot\u00e3o &quot;Update&quot; quando quiser atualizar o plugin Studio com o que voc\u00ea est\u00e1 configurando no Studio.
+label.studio.devmod.desc1=Use o bot\u00e3o 'Update' quando quiser atualizar o plugin Studio com o que voc\u00ea est\u00e1 configurando no Studio.
 
 # google translation: please check
 #en: The update button will change on the Nuxeo instance the version of your Studio plugin with a new one that includes the latest configuration done in Studio.
