--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_vn.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_vn.properties
@@ -836,7 +836,7 @@ command.logout=Log out
 # Human translation
 #en: Users & groups
 command.manageMembers=Qu\u1ea3n l\u00fd nh\u1eefng th\u00e0nh vi\u00ean
-#google: Ng\u01b0\u1eddi d\u00f9ng &amp; nh\u00f3m
+#google: Ng\u01b0\u1eddi d\u00f9ng & nh\u00f3m
 
 # Human translation
 #en: Themes
@@ -3156,7 +3156,7 @@ label.directories.country.United_Arab_Emirates=Ti\u1ec3u v\u01b0\u01a1ng qu\u1ed
 # Human translation
 #en: United Kingdom of Great Britain & N. Ireland
 label.directories.country.United_Kingdom_of_Great_Britain_N_Ireland=V\u01b0\u01a1ng qu\u1ed1c Anh l\u00e0 c\u1ee7a n\u01b0\u1edbc Anh & N. Ireland
-#google: V\u01b0\u01a1ng qu\u1ed1c Li\u00ean hi\u1ec7p Anh &amp; N. Ireland
+#google: V\u01b0\u01a1ng qu\u1ed1c Li\u00ean hi\u1ec7p Anh & N. Ireland
 
 # Human translation
 #en: United States Minor Outlying Islands
