--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_el_GR.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_el_GR.properties
@@ -1282,7 +1282,7 @@ label.login.language=\u0393\u03bb\u03ce\u03c3\u03c3\u03b1
 label.login.invalidUsernameOrPassword=\u039c\u03b7 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7/\u03ba\u03c9\u03b4\u03b9\u03ba\u03cc\u03c2
 label.login.missingUsername=\u039a\u03b5\u03bd\u03cc \u03cc\u03bd\u03bf\u03bc\u03b1 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
 label.login.securityError=\u039c\u03b7 \u03b5\u03be\u03bf\u03c5\u03c3\u03b9\u03bf\u03b4\u03bf\u03c4\u03b7\u03bc\u03ad\u03bd\u03bf\u03c2 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7\u03c2
-label.login.copyright=Copyright &copy; 2001-2010 Nuxeo \u03ba\u03b1\u03b9 \u03c4\u03bf\u03c5\u03c2 \u03b1\u03bd\u03c4\u03af\u03c3\u03c4\u03bf\u03b9\u03c7\u03bf\u03b9 \u03c3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03b5\u03af\u03c2.
+label.login.copyright=Copyright 2001-2011 Nuxeo \u03ba\u03b1\u03b9 \u03c4\u03bf\u03c5\u03c2 \u03b1\u03bd\u03c4\u03af\u03c3\u03c4\u03bf\u03b9\u03c7\u03bf\u03b9 \u03c3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03b5\u03af\u03c2.
 
 #
 # Updates from /Users/fermigier/orig_messages/messages.properties
